[project]
name = "magic-list"
description = "Magic List is a module that extends the built-in list type."
version = "2.4.0"
keywords = ["collections", "list", "built-in", "extension"]

authors = [{ name = "Qexat", email = "contact@qexat.com" }]

requires-python = ">=3.9"

readme = "README.md"
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
documentation = "https://qexat.github.io/magic-list/"
repository = "https://github.com/qexat/magic-list"

[project.optional-dependencies]
dev = [
    "build>=1.2,<2.0",
    "coverage>=7.4,<8.0",
    "pdoc>=14.4,<15.0",
    "pre-commit>=3.7,<4.0",
    "pytest>=7.4,<8.2",
    "pyright>=1.1,<2.0",
    "ruff>=0.4,<1.0",
    "twine>=5.0,<6.0",
    "typing-extensions>=4.11",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
