[project]
name = "magic-list"
description = "Magic List is a module that extends the built-in list type."
version = "2.4.0"
keywords = ["collections", "list", "built-in", "extension"]

authors = [{ name = "Qexat", email = "contact@qexat.com" }]

requires-python = ">=3.9"

readme = "README.md"
license = { file = "LICENSE" }

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
documentation = "https://qexat.github.io/magic-list/"
repository = "https://github.com/qexat/magic-list"

[project.optional-dependencies]
dev = [
    "build>=1.2,<2.0",
    "coverage>=7.4,<8.0",
    "pdoc>=14.4,<15.0",
    "pre-commit>=3.7,<4.0",
    "pytest>=7.4,<8.3",
    "pyright>=1.1,<2.0",
    "ruff>=0.4,<1.0",
    "twine>=5.0,<6.0",
    "typing-extensions>=4.11",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM",
    "D",
    "FIX",
    "ANN1",
    "ANN401",
    "ISC001",
    "T201",
    "TD003",
    "PLR2004",
]
exclude = ["tests/**"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.pylint]
max-returns = 8

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["INP", "FBT", "PLC2701", "S101", "SLF001", "ANN", "PT", "B018"]

[tool.pyright]
include = ["magic_list/**"]
ignore = ["tests/**"]
strict = ["magic_list/**"]

deprecateTypingAliases = true
reportImplicitStringConcatenation = "warning"
reportImportCycles = "warning"
reportMissingSuperCall = "error"
reportPropertyTypeMismatch = "warning"
reportShadowedImports = "warning"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedCallResult = "information"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
